# nemesis-agent

./: Cargo.toml
.github/workflows/: build.yml
crates/codegen/xai-acp-lib/src/: normalize.rs
crates/codegen/xai-agent-lifecycle/src/: lib.rs
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/xai-chat-state/src/actor/: mod.rs  mutations.rs  queries.rs  request_builder.rs  state.rs  tests.rs
crates/codegen/xai-codebase-graph/: Cargo.toml
crates/codegen/xai-codebase-graph/src/: index_manager.rs
crates/codegen/xai-crash-handler/src/: lib.rs  symbolicate.rs
crates/codegen/xai-fast-worktree/src/: api.rs  discovery.rs  lib.rs
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-file-utils/src/: gcs.rs  lib.rs  queue.rs  storage_client.rs  workspace_classifier.rs
crates/codegen/xai-fsnotify/src/: event.rs  lib.rs
crates/codegen/xai-hooks-plugins-types/src/: lib.rs
crates/codegen/xai-mixpanel/: Cargo.toml
crates/codegen/xai-mixpanel/src/: lib.rs
crates/codegen/xai-nemesis-agent/: Cargo.toml
crates/codegen/xai-nemesis-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/xai-nemesis-announcements/: Cargo.toml
crates/codegen/xai-nemesis-announcements/src/: lib.rs
crates/codegen/xai-nemesis-auth/: Cargo.toml
crates/codegen/xai-nemesis-auth/src/: auth_provider.rs  lib.rs  visibility.rs
crates/codegen/xai-nemesis-config/: Cargo.toml
crates/codegen/xai-nemesis-config-types/: Cargo.toml
crates/codegen/xai-nemesis-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/xai-nemesis-config/src/: lib.rs  loader.rs  managed_cache.rs  paths.rs  validation.rs
crates/codegen/xai-nemesis-env/: Cargo.toml
crates/codegen/xai-nemesis-hooks/: Cargo.toml
crates/codegen/xai-nemesis-hooks/src/: config.rs  discovery.rs  env_expand.rs  lib.rs  matcher.rs  test_support.rs  trust.rs
crates/codegen/xai-nemesis-hooks/tests/: integration.rs
crates/codegen/xai-nemesis-http/: Cargo.toml
crates/codegen/xai-nemesis-http/src/: lib.rs
crates/codegen/xai-nemesis-markdown/: Cargo.toml
crates/codegen/xai-nemesis-markdown-core/: Cargo.toml
crates/codegen/xai-nemesis-markdown-core/src/: lib.rs
crates/codegen/xai-nemesis-markdown/benches/: bench.rs
crates/codegen/xai-nemesis-markdown/fuzz/: Cargo.toml
crates/codegen/xai-nemesis-markdown/src/: colors.rs  lib.rs  parse.rs  syntax.rs
crates/codegen/xai-nemesis-mcp/: Cargo.toml
crates/codegen/xai-nemesis-mcp/src/: credentials.rs  lib.rs  mcp_http_client.rs  oauth.rs  servers.rs
crates/codegen/xai-nemesis-mcp/tests/: repro_sse_flood.rs
crates/codegen/xai-nemesis-memory/: Cargo.toml
crates/codegen/xai-nemesis-memory/src/: backend.rs  chunker.rs  dream.rs  embedding.rs  index.rs  lib.rs  mmr.rs  search.rs  storage.rs  watcher.rs
crates/codegen/xai-nemesis-mermaid/: Cargo.toml
crates/codegen/xai-nemesis-mermaid/src/: lib.rs
crates/codegen/xai-nemesis-mermaid/tests/: pure_engine.rs
crates/codegen/xai-nemesis-models/: Cargo.toml
crates/codegen/xai-nemesis-models/src/: lib.rs
crates/codegen/xai-nemesis-pager/: Cargo.toml
crates/codegen/xai-nemesis-pager-bin/: Cargo.toml
crates/codegen/xai-nemesis-pager-bin/src/: main.rs
crates/codegen/xai-nemesis-pager-minimal/: Cargo.toml
crates/codegen/xai-nemesis-pager-minimal/src/: auth.rs  commit.rs  full_view.rs  lib.rs  live.rs  overlay.rs  panel.rs  plan.rs  todo.rs  welcome.rs
crates/codegen/xai-nemesis-pager-pty-harness/: Cargo.toml
crates/codegen/xai-nemesis-pager-render/: Cargo.toml
crates/codegen/xai-nemesis-paths/: Cargo.toml
crates/codegen/xai-nemesis-plugin-marketplace/: Cargo.toml
crates/codegen/xai-nemesis-sampler/: Cargo.toml
crates/codegen/xai-nemesis-sampling-types/: Cargo.toml
crates/codegen/xai-nemesis-sampling-types/src/: conversation.rs  error.rs  lib.rs  types.rs
crates/codegen/xai-nemesis-sandbox/: Cargo.toml
crates/codegen/xai-nemesis-secrets/: Cargo.toml
crates/codegen/xai-nemesis-shared/: Cargo.toml
crates/codegen/xai-nemesis-shell/: Cargo.toml
crates/codegen/xai-nemesis-shell-base/: Cargo.toml
crates/codegen/xai-nemesis-shell-base/src/: cpu_profile.rs  env.rs  lib.rs
crates/codegen/xai-nemesis-shell-base/src/util/: changelog.rs  grok_home.rs  mod.rs  secure_file.rs  tips.rs
crates/codegen/xai-nemesis-shell-session-support/: Cargo.toml
crates/codegen/xai-nemesis-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/xai-nemesis-subagent-resolution/: Cargo.toml
crates/codegen/xai-nemesis-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs
crates/codegen/xai-nemesis-telemetry/: Cargo.toml
crates/codegen/xai-nemesis-test-support/: Cargo.toml
crates/codegen/xai-nemesis-tools/: Cargo.toml  build.rs
crates/codegen/xai-nemesis-tools-api/: Cargo.toml
crates/codegen/xai-nemesis-update/: Cargo.toml
crates/codegen/xai-nemesis-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/xai-nemesis-update/tests/: test_blitz_cancel.rs  test_check_status_regression.rs  test_concurrent_convergence.rs  test_downgrade_matrix.rs  test_install_internal.rs  test_install_sh.rs  test_io.rs  test_network.rs  test_subprocess.rs
crates/codegen/xai-nemesis-update/tests/common/: mod.rs
crates/codegen/xai-nemesis-version/: Cargo.toml
crates/codegen/xai-nemesis-voice/: Cargo.toml
crates/codegen/xai-nemesis-workspace/: Cargo.toml
crates/codegen/xai-nemesis-workspace-client/: Cargo.toml
crates/codegen/xai-nemesis-workspace-client/src/: lib.rs
crates/codegen/xai-nemesis-workspace-types/: Cargo.toml
crates/codegen/xai-prompt-queue/: Cargo.toml
crates/codegen/xai-sqlite-journal/: Cargo.toml
crates/common/xai-nemesis-compaction/: Cargo.toml
crates/common/xai-tool-runtime/: Cargo.toml
prod/mc/cli-chat-proxy-types/: Cargo.toml
(+892 files in other folders)
