[package]
license = "Apache-2.0"
name = "xai-chat-state"
version = "0.1.0"
edition.workspace = true
description = "Actor-based chat state management for xAI agents"

[features]
default-bazel = []

[dependencies]
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
xai-nemesis-compaction = { path = "../../common/xai-nemesis-compaction" }
xai-nemesis-sampling-types = { path = "../xai-nemesis-sampling-types" }
xai-token-estimation = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
