[package]
license = "Apache-2.0"
name = "xai-nemesis-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the grok CLI, extracted from xai-nemesis-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
xai-nemesis-announcements = { workspace = true }
xai-nemesis-config = { workspace = true }
xai-nemesis-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
