[package]
license = "Apache-2.0"
name = "xai-nemesis-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the grok CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
xai-nemesis-auth = { workspace = true, features = ["middleware"] }
xai-nemesis-sampler = { path = "../xai-nemesis-sampler" }
xai-nemesis-telemetry = { workspace = true }
xai-nemesis-version = { workspace = true }
xai-nemesis-workspace = { workspace = true }

[lints]
workspace = true
