[package]
license = "Apache-2.0"
name = "xai-nemesis-memory"
version = "0.1.0"
edition.workspace = true

[features]
# Exposes `#[cfg(test)]`-only helpers (`MemoryStorage::with_paths`,
# `MockEmbeddingProvider`) to downstream crates' test targets.
test-support = []

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
dunce = { workspace = true }
flate2 = { workspace = true }
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
] }
notify = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
# rusqlite 0.37 + bundled = self-contained SQLite (>= 3.50.2) with FTS5.
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = { workspace = true }
# sqlite-vec: vec0 virtual table for KNN vector search.
sqlite-vec = "=0.1.7-alpha.2"
tar = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = { workspace = true }
xai-nemesis-auth = { workspace = true }
xai-nemesis-config-types = { workspace = true }
xai-nemesis-http = { workspace = true }
xai-nemesis-telemetry = { workspace = true }
xai-nemesis-tools = { workspace = true }
xai-nemesis-version = { workspace = true }
xai-sqlite-journal = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
