[package]
name = "nemesis-agent"
version = "1.0.0"
edition.workspace = true
license = "Apache-2.0"
authors = ["NEMESIS"]
default-run = "nemesis"

# NEMESIS Agent TUI - Fork of grok-build with full rebranding.
# The binary installs the minimal-mode IoC hooks at startup.
[[bin]]
name = "nemesis"
path = "src/main.rs"

[dependencies]
# The pager library (all application logic + the public API main.rs drives).
xai-nemesis-pager = { path = "../xai-nemesis-pager" }
# Optional scrollback-native render mode, wired in via the fn-pointer seam.
xai-nemesis-pager-minimal = { path = "../xai-nemesis-pager-minimal" }

# Agent runtime + leader/stdio/headless entry points.
xai-nemesis-shell = { workspace = true }
xai-nemesis-update = { path = "../xai-nemesis-update" }
xai-nemesis-version = { workspace = true }
xai-nemesis-telemetry = { workspace = true }
xai-nemesis-workspace = { workspace = true }
xai-crash-handler = { path = "../xai-crash-handler" }
xai-acp-lib = { workspace = true }

# Async runtime + misc.
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "io-util",
    "io-std",
] }
tokio-util = { workspace = true, features = ["compat"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dunce = { workspace = true }
semver = { workspace = true }
xai-tty-utils = { workspace = true }
xai-nemesis-config = { workspace = true }
xai-nemesis-sandbox = { path = "../xai-nemesis-sandbox", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }

# Binary hardening: compile-time string + control-flow obfuscation.
obfstr = { workspace = true }
cryptify = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
# Default allocator on Unix; gated by the `jemalloc` feature (see main.rs
# `#[global_allocator]`, cfg(all(feature = "jemalloc", unix))).
# `stats` is binary-scoped only (not workspace-wide) so this CLI jemalloc
# link gets --enable-stats for stats.allocated / stats.resident mallctl.
tikv-jemallocator = { workspace = true, optional = true, features = ["stats"] }
# Raw mallctl for the memory-cliff arena purge hook (see
# `purge_jemalloc_retained_pages` + the `install_release_hook` call in
# main.rs). Same version family as the
# allocator; adds no new build units beyond what tikv-jemallocator pulls in.
tikv-jemalloc-sys = { workspace = true, optional = true }
# Heap-profile / stats mallctl helpers (prof.active, prof.dump, epoch, stats.*).
tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["stats", "use_std"] }

[dev-dependencies]
serial_test = { workspace = true }
# `PagerArgs::try_parse_from` in the CLI-parsing unit tests (needs the
# `clap::Parser` trait in scope).
clap = { workspace = true, features = ["derive"] }

[features]
default = [
    "jemalloc",
    "sandbox-enforce",
    ]
default-bazel = [
    "jemalloc",
    "sandbox-enforce",
    ]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-sys", "dep:tikv-jemalloc-ctl"]
sandbox-enforce = ["xai-nemesis-pager/sandbox-enforce"]
release-dist = ["xai-nemesis-pager/release-dist"]
