[package]
license = "Apache-2.0"
name = "xai-nemesis-shell-session-support"
version = "0.1.0"
edition.workspace = true
description = "Session-support modules for the grok shell crate family: managed MCP credential/catalog caching and file-access tracking."

[dependencies]
agent-client-protocol = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
xai-file-utils = { path = "../xai-file-utils", optional = true }
xai-nemesis-http = { workspace = true }
xai-nemesis-shell-base = { workspace = true }
xai-nemesis-version = { workspace = true }
xai-nemesis-workspace = { workspace = true }

[features]
default-bazel = []

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }

[lints]
workspace = true
