[package]
license = "Apache-2.0"
name = "xai-nemesis-workspace-client"
version = "0.1.0"
edition.workspace = true
description = "Lightweight typed client for hub-proxied workspace.* RPCs (shared by xai-nemesis-shell proxy mode and other consumers)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
xai-computer-hub-sdk = { workspace = true }
xai-nemesis-workspace-types = { workspace = true }
xai-tool-protocol = { workspace = true }
xai-tool-runtime = { workspace = true }

[features]
default = []
default-bazel = []
[dev-dependencies]
schemars = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
xai-tool-types = { workspace = true }

[lints]
workspace = true
